[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/work_!.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Transition_in.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player_certo.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/seta direita pixel.png" type="Texture" id=4]
[ext_resource path="res://Script/arrow_work.gd" type="Script" id=5]
[ext_resource path="res://Scenery/joystick.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ElevadorAbrindo.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53, 34.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 312, 233.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 217, 269.25 )

[sub_resource type="Animation" id=4]
resource_name = "elevador"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.5, 368.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 647.5, 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 650, 10.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 371 )

[node name="Node2D" type="Node2D"]

[node name="Work!" type="Sprite" parent="."]
position = Vector2( 640.5, 361 )
scale = Vector2( 0.264779, 0.264609 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 41, 669 )
rotation = -3.14159
scale = Vector2( 0.242557, 0.351368 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 35, 672 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Joystick" parent="." instance=ExtResource( 6 )]

[node name="Transition_in" parent="." instance=ExtResource( 2 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 312, 331.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 830, 369.25 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 788, 296 )
scale = Vector2( 4.37366, 5.92882 )
texture = ExtResource( 7 )
hframes = 11
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/Sprite"]
anims/elevador = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 5 )

[node name="Player_certo" parent="." instance=ExtResource( 3 )]
position = Vector2( 147, 682 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 0.5, 358.5 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 637.5, 723 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 640, 0.5 )
shape = SubResource( 8 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 1281, 357 )
shape = SubResource( 9 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
